data/derived/comb/progs/unify/prog1701.ml.out
Characters 298-299:
  addit / 10 :: x)
                ^
Error: This expression has type int list * int list
       but an expression was expected of type int list
